CAMEL-15520: avoid using the deprecated Character constructor